# image-text-extractor

./: README.md  pyproject.toml
image-text-extractor/: api.py  config.py  image_processor.py  main.py  ocr_agent.py  ui.py
image-text-extractor/tests/: test_api.py  test_image_processor.py  test_ocr_agent.py
